<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/main_layout">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            style="@style/Theme.MaterialComponents"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="10dp"
            android:padding="12dp">

            <ImageView
                android:id="@+id/imageview1"
                android:layout_width="43dp"
                android:layout_height="36dp"
                android:layout_marginStart="32dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/todo"
                android:cropToPadding="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.711"
                tools:ignore="InvalidId" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="30dp"
                android:elevation="6dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/username1"
                android:textColor="#000"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@+id/textView2"
                app:layout_constraintEnd_toStartOf="@+id/username_txt"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="4dp"
                android:elevation="6dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/password1"
                android:textColor="#000"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/password_txt" />

            <TextView
                android:id="@+id/password_txt"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/displ"
                android:elevation="6dp"
                android:fontFamily="sans-serif-medium"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/password"
                android:textColor="#6A6767"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username_txt"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/username_txt"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/displ"
                android:elevation="6dp"
                android:fontFamily="sans-serif-medium"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/username2"
                android:textColor="#6A6767"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>