<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="313dp"
        android:layout_height="62dp"
        android:elevation="8dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/instruction"
        android:textColor="#3F51B5"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.168" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="315dp"
        android:layout_height="45dp"
        android:layout_margin="14dp"
        android:autofillHints="numbers"
        android:background="@drawable/edit"
        android:elevation="7dp"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/characters"
        android:paddingStart="11dp"
        android:paddingEnd="11dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.329" />

    <Button
        android:id="@+id/button"
        android:layout_width="315dp"
        android:layout_height="45dp"
        android:layout_marginTop="101dp"
        android:text="@string/generate"
        android:textSize="20sp"
        android:elevation="10dp"
        android:fontFamily="sans-serif-medium"
        android:background="@drawable/button"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editText"
        tools:ignore="ExtraText" />



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:scaleType="fitCenter"
        app:backgroundTint="#fff"
        android:elevation="10dp"
        android:src="@drawable/ic_round_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.671"
        app:layout_constraintStart_toEndOf="@+id/password"
        app:layout_constraintTop_toTopOf="@+id/password"
        app:layout_constraintVertical_bias="0.504" />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:textColor="#3F51B5"
        android:textSize="22sp"
        android:elevation="8dp"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />


</androidx.constraintlayout.widget.ConstraintLayout>