<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/endnote"
        style="@style/Theme.MaterialComponents"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="20dp"
        android:fontFamily="sans-serif-medium"
        android:paddingTop="30dp"
        android:text="Thank You Your Password has been saved"
        android:textColor="#4CAF50"
        android:textSize="70sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="InvalidId" />

    <GridLayout
        android:id="@+id/grid1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/edit"
        android:columnCount="3"
        android:elevation="10dp"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/save_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/save_button"
        tools:layout_editor_absoluteY="200dp">

        <ImageButton
            android:id="@+id/insta_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/edit"
            android:contentDescription="@string/savewebsite"
            android:elevation="8dp"
            android:src="@drawable/ic_instagram" />

        <ImageButton
            android:id="@+id/gmail_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/edit"
            android:contentDescription="@string/savewebsite"
            android:elevation="10dp"
            android:src="@drawable/ic_gmail" />

        <ImageButton
            android:id="@+id/amazon_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/edit"
            android:contentDescription="@string/savewebsite"
            android:elevation="10dp"
            android:src="@drawable/ic_amazon" />

        <ImageButton
            android:id="@+id/fb_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/edit"
            android:contentDescription="@string/savewebsite"
            android:elevation="10dp"
            android:src="@drawable/ic_facebook" />

        <ImageButton
            android:id="@+id/twitter_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/edit"
            android:contentDescription="@string/savewebsite"
            android:elevation="10dp"
            android:src="@drawable/ic_twitter" />

        <ImageButton
            android:id="@+id/steam_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/edit"
            android:contentDescription="@string/savewebsite"
            android:elevation="10dp"
            android:src="@drawable/ic_steam" />

        <ImageButton
            android:id="@+id/linkedin_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit"
            android:contentDescription="@string/savewebsite"
            android:elevation="10dp"
            android:src="@drawable/ic_linkedin" />

        <ImageButton
            android:id="@+id/pin_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit"
            android:backgroundTint="#d32f2f"
            android:backgroundTintMode="multiply"
            android:contentDescription="@string/savewebsite"
            android:elevation="10dp"
            android:src="@drawable/ic_pinterest" />

        <ImageButton
            android:id="@+id/spot_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit"
            android:backgroundTint="#8BC34A"
            android:backgroundTintMode="multiply"
            android:contentDescription="@string/savewebsite"
            android:elevation="10dp"
            android:src="@drawable/ic_spotify" />
    </GridLayout>

    <EditText
        android:id="@+id/user_name"
        android:layout_width="315dp"
        android:layout_height="45dp"
        android:layout_marginBottom="368dp"
        android:autofillHints="username"
        android:background="@drawable/edit"
        android:elevation="7dp"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/username"
        android:inputType="text"
        android:paddingStart="11dp"
        android:paddingEnd="11dp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textview3"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/textview3"
        android:textColor="#3F51B5"
        android:textSize="22sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/endnote"
        app:layout_constraintEnd_toStartOf="@+id/endnote"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/endnote"
        app:layout_constraintTop_toBottomOf="@+id/save_button"
        app:layout_constraintVertical_bias="0.237" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="315dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button"
        android:elevation="10dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/save"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name" />

</androidx.constraintlayout.widget.ConstraintLayout>